--- a/src/Makefile
+++ b/src/Makefile
@@ -5,10 +5,11 @@
 VERSION=0.1alpha
 
 CC=gcc
+AR=ar
 CFLAGS=-Wall -fPIC -DVERSION=\"$(VERSION)\" -Iinclude -Wno-unused-variable -Wno-unused-function
 LDFLAGS=-ltestgear -L.
      
-all: libtestgear.so test
+all: libtestgear.so libtestgear.a test
      
 debug: CFLAGS += -DDEBUG -g
 debug: all
@@ -23,10 +24,13 @@ $(objects): %.o: %.c
 libtestgear.so: $(objects)
 	$(CC) -Wall -shared -Wl,-soname,$@ -o $@ $(objects) -Wl,-init,init
 
+libtestgear.a: $(objects)
+	$(AR) rcs $@ $(objects)
+
 test: libtestgear.so test.c
 	$(CC) $(CFLAGS) test.c -o test $(LDFLAGS)
 
 clean:
-	rm -f *.o libtestgear.so test
+	rm -f *.o *.a libtestgear.so test
 
 .PHONY: all clean debug
