Introduced session handling
Introduced session handling in order to support multiple active
connections. Up to 50 simultaneous connections are supported.

This means that it is now possible to connect to multiple test gear
servers from the same test script. For example:

device0 = connect("tcp://127.0.0.1:8000")
device1 = connect("tcp://127.0.0.1:8001")

device0.list_plugins()
device1.list_plugins()

--- a/src/Makefile
+++ b/src/Makefile
@@ -16,7 +16,8 @@ debug: all
 
 objects = testgear.o \
           tcp.o \
-          message.o
+          message.o \
+          session.o
 
 $(objects): %.o: %.c
 	$(CC) -c $(CFLAGS) $< -o $@
