--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,29 @@
 *.a
+*.la
 *.o
+*.lo
 *.so
 *.swp
 src/test
+Makefile.in
+Makefile
+/autom4te.cache
+/aclocal.m4
+/compile
+/configure
+/depcomp
+/install-sh
+/missing
+stamp-h1
+/config.guess
+/config.sub
+/config.log
+/config.status
+/ltmain.sh
+/m4
+/ar-lib
+/libtool
+.deps
+.libs
+config.h.in
+config.h
